--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://sergiokopplin.github.io/indigo
+domain: ajs997.github.io
+url: https://ajs997.github.io/
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
