--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ resume-url: https://google.com/?q=my+resume
 # domain:http://www.ajays.in/
 # your url: https://USERNAME.github.io
 domain: ajas997.github.io       
-url: http://www.ajays.in/
+url: https://www.ajays.in/
 
 permalink: /:title/
 
