--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ resume-url: https://google.com/?q=my+resume
 # url: https://sergiokopplin.github.io/indigo
 # domain:http://www.ajays.in/
 # your url: https://USERNAME.github.io
-domain: ajas997.github.io       
-url: https://ajas997.github.io
+domain: ajs997.github.io       
+url: https://ajs997.github.io
 
 permalink: /:title/
 
