--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Ajay S
-bio: A Man who travels the world eating noodles
+bio: Trust Me! I can change the world
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -8,18 +8,15 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile.jpg
+picture: assets/images/images.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
 resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume-url: assets/files/ajays_resume.pdf
 
-# url: https://sergiokopplin.github.io/indigo
-# domain:http://www.ajays.in/
-# your url: https://USERNAME.github.io
-domain: ajs997.github.io       
+domain: ajs997.github.io
 url: https://ajs997.github.io
 
 permalink: /:title/
@@ -37,11 +34,11 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+# facebook: myfacebook
+# twitter: mytwitter
 # instagram: myinstagram
 # pinterest: mypinterest
-# linkedin: mylinkedin
+linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
 github: mygithub
@@ -50,24 +47,18 @@ github: mygithub
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: myemail@gmail.com
 
 authors:
-  johndoe:
-    name: John Doe
-    bio: A Man who travels the world eating noodles
+  ajays:
+    name: Ajay S
+    bio: Trust Me! I can change the world
     external-image: false
-    picture: assets/images/profile.jpg
-    twitter: johndoe
-  jamesfoster:
-    name: James Foster
-    bio: A Man who develops software with coffee
-    external-image: false
-    picture: assets/images/james.jpg
-    twitter: jamesfoster
+    picture: assets/images/images.jpg
+    # twitter: ajays
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
