--- a/_config.yml
+++ b/_config.yml
@@ -38,10 +38,10 @@ disqus:
 # twitter: mytwitter
 # instagram: myinstagram
 # pinterest: mypinterest
-linkedin: mylinkedin
+linkedin: ajay-s-profile
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: ajs997
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
