--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Ajay S
-bio: Trust Me! I can change the world
+bio: Researcher, Developer
 
 # twitter summary info
 description: A blog about technology and stuff related
