--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-name: Ajay S
+name: Ajay Sanjeevan
 bio: Researcher, Developer
 
 # twitter summary info
@@ -8,7 +8,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/images.jpg
+picture: assets/images/new.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -50,12 +50,12 @@ github: ajs997
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: ajays997@hotmail.com
 
 authors:
   ajays:
     name: Ajay S
-    bio: Trust Me! I can change the world
+    bio: Researcher, Developer
     external-image: false
     picture: assets/images/images.jpg
     # twitter: ajays
