About.me changes

--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ github: ajs997
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: ajays997@hotmail.com
+email: ajays@virginia.edu
 
 authors:
   ajays:
